--- a/tsutsu-mini-gfw.ini
+++ b/tsutsu-mini-gfw.ini
@@ -1,5 +1,5 @@
 [custom]
-surge_ruleset=🎯 国内网站设置,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+surge_ruleset=🎯 国内网站设置,https://raw.githubusercontent.com/zyjia/SS-Rule-Snippet/main/LocalAreaNetwork.list
 surge_ruleset=🎯 国内网站设置,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 surge_ruleset=🎯 国内网站设置,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=🚀 全局设置,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
